PR19362: fix doubled locations in probe copy-ctor

Commit 1341a03cc550835d5ddab35bb9333e43bd623714 moved most of the body
of the probe::probe copy constructor to its initializer list.  However,
the push to locations was accidentally left, so this vector was both
initialized and appended, doubling all probes from here.  This showed up
in library.exp SDT probes which counted twice too many matches.